# Pico_modbus

./: CMakeLists.txt  README.md
config/: mb2hal.ini
port/: w6100_spi.c
src/: io_handler.c  io_handler.h  main.c  modbus_server.c  modbus_server.h
